# build/swagger.json
@@ -117,6 +117,12 @@
 								}
 							}
 						}
+					},
+					"400": {
+						"description": "Invalid request params"
+					},
+					"404": {
+						"description": "User not found"
 					}
 				},
 				"tags": [
@@ -149,6 +155,12 @@
 								}
 							}
 						}
+					},
+					"400": {
+						"description": "Invalid request params"
+					},
+					"409": {
+						"description": "Already exists"
 					}
 				},
 				"tags": [
@@ -209,6 +221,9 @@
 								}
 							}
 						}
+					},
+					"400": {
+						"description": "Invalid request params"
 					}
 				},
 				"summary": "Create a new book",
@@ -248,6 +263,12 @@
 								}
 							}
 						}
+					},
+					"400": {
+						"description": "Invalid request params"
+					},
+					"404": {
+						"description": "Book not found"
 					}
 				},
 				"summary": "Get a book by ID",
@@ -276,6 +297,12 @@
 				"responses": {
 					"204": {
 						"description": ""
+					},
+					"400": {
+						"description": "Invalid request params"
+					},
+					"404": {
+						"description": "Book not found"
 					}
 				},
 				"summary": "Delete a book by ID",
